--- a/audio/maplay/Makefile
+++ b/audio/maplay/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.18 2006/03/04 21:28:57 jlam Exp $
+# $NetBSD: Makefile,v 1.19 2006/05/24 11:47:12 tonio Exp $
 
-DISTNAME=       maplay1_2
+DISTNAME=	maplay1_2
 PKGNAME=	maplay-1.2
 PKGREVISION=	1
 CATEGORIES=	audio
@@ -12,7 +12,7 @@ COMMENT=	MPEG audio player/decoder for layer I and II MPEG audio streams
 
 WRKSRC=		${WRKDIR}
 
-USE_LANGUAGES+=	c++
+USE_LANGUAGES=	c++
 NOT_FOR_PLATFORM=	Interix-*-*
 
 pre-configure:
