--- a/sysutils/rfstool/Makefile
+++ b/sysutils/rfstool/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2006/03/04 21:30:42 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2006/09/09 02:46:08 obache Exp $
 #
 
 DISTNAME=	rfstool-0.14-source
@@ -16,7 +16,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=		${WRKDIR}/${PKGNAME_NOREV}/rfstool
 MAKE_FILE=	makefile.gcc3x
-USE_LANGUAGES+=	c++
+USE_LANGUAGES=	c++
 
 INSTALLATION_DIRS=	sbin
 
