--- a/math/Makefile
+++ b/math/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.153 2006/11/19 04:57:13 obache Exp $
+# $NetBSD: Makefile,v 1.154 2007/01/03 07:54:58 agc Exp $
 #
 
 COMMENT=	Mathematics
@@ -95,6 +95,7 @@ SUBDIR+=	minpack
 SUBDIR+=	mpfr
 SUBDIR+=	mtl
 SUBDIR+=	newmat
+SUBDIR+=	nickle
 SUBDIR+=	ntl
 SUBDIR+=	octave
 SUBDIR+=	octave-current
