--- a/net/dnsmasq/Makefile
+++ b/net/dnsmasq/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2005/12/29 06:21:58 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2006/02/05 23:10:23 joerg Exp $
 #
 
-DISTNAME=		dnsmasq-2.23
-PKGREVISION=		1
+DISTNAME=		dnsmasq-2.38
 CATEGORIES=		net
 MASTER_SITES=		http://www.thekelleys.org.uk/dnsmasq/
 
