--- a/security/libpreludedb/Makefile
+++ b/security/libpreludedb/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.14 2007/01/25 14:39:03 shannonjr Exp $
+# $NetBSD: Makefile,v 1.15 2007/02/22 19:27:07 wiz Exp $
 #
 
-DISTNAME=		libpreludedb-0.9.10
-PKGREVISION=		1
+DISTNAME=		libpreludedb-0.9.11.3
+#PKGREVISION=		1
 CATEGORIES=		security
 MASTER_SITES=		http://www.prelude-ids.org/download/releases/ \
 			http://www.prelude-ids.org/download/releases/old/
