--- a/security/prelude-lml/Makefile
+++ b/security/prelude-lml/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2006/07/11 09:41:33 shannonjr Exp $
+# $NetBSD: Makefile,v 1.13 2006/08/23 18:51:56 wiz Exp $
 #
 
-DISTNAME=		prelude-lml-0.9.6
+DISTNAME=		prelude-lml-0.9.8.1
 CATEGORIES=		security
 MASTER_SITES=		http://www.prelude-ids.org/download/releases/ \
 			http://www.prelude-ids.org/download/releases/old/
