--- a/multimedia/mplayer/Makefile
+++ b/multimedia/mplayer/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.38 2007/01/09 14:49:34 drochner Exp $
+# $NetBSD: Makefile,v 1.39 2007/02/22 19:26:51 wiz Exp $
 
 PKGNAME=	mplayer-${MPLAYER_PKG_VERSION}
-PKGREVISION=	3
+PKGREVISION=	4
 
 COMMENT=	Software-only MPEG-1/2/4 video decoder
 
