--- a/net/libdnet/Makefile
+++ b/net/libdnet/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:10:26 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/04 21:30:20 jlam Exp $
 #
 
-DISTNAME=	libdnet-1.10
-PKGREVISION=	1
+DISTNAME=	libdnet-1.11
 CATEGORIES=	devel net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=libdnet/}
 
@@ -16,8 +15,14 @@ USE_LIBTOOL=	yes
 
 BUILD_DEFS+=	USE_INET6
 
-.include "../../mk/bsd.prefs.mk"
-.if ${MACHINE_ARCH} == "alpha"
+PKG_OPTIONS_VAR=	PKG_OPTIONS.libdnet
+PKG_SUPPORTED_OPTIONS=	libdnetcheck
+.include "../../mk/bsd.options.mk"
+
+.if !empty(PKG_OPTIONS:Mlibdnetcheck)
+.include "../../devel/check/buildlink3.mk"
+TEST_TARGET=	check
+.else
 CONFIGURE_ARGS+=	--without-check
 .endif
 
