--- a/emulators/Makefile
+++ b/emulators/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.153 2006/06/26 17:54:18 salo Exp $
+# $NetBSD: Makefile,v 1.154 2006/10/12 12:04:39 markd Exp $
 #
 
 COMMENT=	Emulators for other operating systems
@@ -65,6 +65,7 @@ SUBDIR+=	netbsd32_compat14
 SUBDIR+=	netbsd32_compat15
 SUBDIR+=	netbsd32_compat16
 SUBDIR+=	openmsx
+SUBDIR+=	or1ksim
 SUBDIR+=	osf1_lib
 SUBDIR+=	p11
 SUBDIR+=	palmosemulator
