--- a/security/Makefile
+++ b/security/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.285 2007/01/08 18:41:37 drochner Exp $
+# $NetBSD: Makefile,v 1.286 2007/01/15 14:22:26 tonio Exp $
 #
 
 COMMENT=	Security tools
@@ -57,7 +57,6 @@ SUBDIR+=	egd
 SUBDIR+=	flawfinder
 SUBDIR+=	fprot-workstation-bin
 SUBDIR+=	fragroute
-SUBDIR+=	fressh
 SUBDIR+=	fsh
 SUBDIR+=	fwbuilder
 SUBDIR+=	fwbuilder21
