--- a/mail/p5-Mail-Mbox-MessageParser/Makefile
+++ b/mail/p5-Mail-Mbox-MessageParser/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.8 2006/03/04 21:30:01 jlam Exp $
+# $NetBSD: Makefile,v 1.9 2006/10/15 10:06:44 obache Exp $
 
-DISTNAME=	Mail-Mbox-MessageParser-1.4005
+DISTNAME=	Mail-Mbox-MessageParser-1.5000
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	mail perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Mail/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/~dcoppit/Mail-Mbox-MessageParser/
+HOMEPAGE=	http://search.cpan.org/dist/Mail-Mbox-MessageParser/
 COMMENT=	Perl5 module for parsing mail messages
 
 DEPENDS+=	p5-FileHandle-Unget-[0-9]*:../../devel/p5-FileHandle-Unget
