--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.473 2007/02/04 09:34:31 wiz Exp $
+# $NetBSD: Makefile,v 1.474 2007/02/11 01:25:26 reed Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -376,6 +376,7 @@ SUBDIR+=	xgas
 SUBDIR+=	xglobe
 SUBDIR+=	xgrk
 SUBDIR+=	xhangglider
+SUBDIR+=	xhost
 SUBDIR+=	xineramaproto
 SUBDIR+=	xinit
 SUBDIR+=	xjman
