--- a/textproc/p5-Text-Quoted/Makefile
+++ b/textproc/p5-Text-Quoted/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2005/08/06 06:19:33 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2007/02/19 20:51:53 wiz Exp $
 #
 
-DISTNAME=	Text-Quoted-1.10
+DISTNAME=	Text-Quoted-2.02
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
