--- a/www/p5-Apache-Session/Makefile
+++ b/www/p5-Apache-Session/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2006/03/04 21:30:59 jlam Exp $
+# $NetBSD: Makefile,v 1.21 2006/07/19 22:45:40 wiz Exp $
 #
 
-DISTNAME=		Apache-Session-1.81
+DISTNAME=		Apache-Session-1.82
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5ase
 CATEGORIES=		www perl5
