--- a/math/gsl/Makefile
+++ b/math/gsl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.24 2006/03/31 23:56:28 jlam Exp $
+# $NetBSD: Makefile,v 1.25 2006/04/20 18:31:15 adam Exp $
 
-DISTNAME=	gsl-1.8
+DISTNAME=	gsl-1.9
 CATEGORIES=	math devel
 MASTER_SITES=	${MASTER_SITE_GNU:=gsl/}
 
@@ -10,7 +10,7 @@ COMMENT=	The GNU Scientific Library
 
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
-INFO_FILES=		# PLIST
+INFO_FILES=		yes
 
 TEST_TARGET=		check
 
