--- a/sysutils/usbutil/Makefile
+++ b/sysutils/usbutil/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2007/01/23 17:02:06 drochner Exp $
+# $NetBSD: Makefile,v 1.10 2007/02/22 19:27:12 wiz Exp $
 #
 
 DISTNAME=	usbutil-0.5
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	sysutils
 MASTER_SITES=	ftp://ftp.augustsson.net/pub/netbsd/
 
