--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2007/02/20 23:45:36 xtraeme Exp $
+# $NetBSD: Makefile,v 1.6 2007/02/20 23:49:56 xtraeme Exp $
 #
 
 COMMENT=	File systems, and file system related packages
@@ -10,5 +10,6 @@ SUBDIR+=	fuse-cryptofs
 SUBDIR+=	fuse-curlftpfs
 SUBDIR+=	fuse-httpfs
 SUBDIR+=	fuse-lzofs
+SUBDIR+=	fuse-ntfs-3g
 
 .include "../mk/bsd.pkg.subdir.mk"
