--- a/devel/p5-Config-General/Makefile
+++ b/devel/p5-Config-General/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.10 2005/08/06 06:19:09 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/10/10 10:48:49 dillo Exp $
 #
 
-DISTNAME=	Config-General-2.27
+DISTNAME=	Config-General-2.32
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5cfg
-PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Config/}
 
