--- a/converters/p5-Convert-UUlib/Makefile
+++ b/converters/p5-Convert-UUlib/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/08/06 06:19:05 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2006/03/04 21:29:06 jlam Exp $
 
-DISTNAME=		Convert-UUlib-1.051
-PKGNAME=		p5-${DISTNAME}
+DISTNAME=		Convert-UUlib-1.08
+PKGNAME=		p5-${DISTNAME}0
 SVR4_PKGNAME=		p5uul
-PKGREVISION=		1
 CATEGORIES=		converters perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Convert/}
 
