--- a/devel/p5-ExtUtils-F77/Makefile
+++ b/devel/p5-ExtUtils-F77/Makefile
@@ -1,18 +1,19 @@
-# $NetBSD: Makefile,v 1.13 2005/08/06 06:19:10 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2006/03/04 21:29:21 jlam Exp $
 
-DISTNAME=	ExtUtils-F77-1.13
+DISTNAME=	ExtUtils-F77-1.15
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5ext
-PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=ExtUtils/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/dist/ExtUtils-F77/
 COMMENT=	Perl module for determining how to link Fortran and C
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 PERL5_PACKLIST=		auto/ExtUtils/F77/.packlist
+USE_LANGUAGES+=		fortran
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
