--- a/math/p5-Math-MatrixReal/Makefile
+++ b/math/p5-Math-MatrixReal/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.11 2005/08/06 06:19:23 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/04 21:30:05 jlam Exp $
 
-DISTNAME=	Math-MatrixReal-1.3a5
+DISTNAME=	Math-MatrixReal-2.01
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5mmr
-PKGREVISION=	2
 CATEGORIES=	math perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Math/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://search.cpan.org/dist/Math-MatrixReal/
 COMMENT=	Perl module for performing operations on real matrices
 
 PERL5_PACKLIST=		auto/Math/MatrixReal/.packlist
