--- a/security/p5-Module-Signature/Makefile
+++ b/security/p5-Module-Signature/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.9 2006/02/05 23:10:45 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2006/03/04 21:30:37 jlam Exp $
 #
 
-DISTNAME=	Module-Signature-0.44
+DISTNAME=	Module-Signature-0.55
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5ms
-PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Module/}
 
