--- a/devel/memcached/Makefile
+++ b/devel/memcached/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2007/01/07 09:13:51 rillig Exp $
+# $NetBSD: Makefile,v 1.8 2007/02/11 05:22:24 tv Exp $
 #
 
-DISTNAME=	memcached-1.1.12
-PKGREVISION=	1
+DISTNAME=	memcached-1.2.1
 CATEGORIES=	devel
 MASTER_SITES=	http://www.danga.com/memcached/dist/
 
