--- a/misc/Makefile
+++ b/misc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.270 2007/01/10 15:19:37 obache Exp $
+# $NetBSD: Makefile,v 1.271 2007/01/26 09:50:08 markd Exp $
 #
 
 COMMENT=	Miscellaneous utilities
@@ -161,6 +161,7 @@ SUBDIR+=	nxtvepg
 SUBDIR+=	open2300
 SUBDIR+=	open2300-mysql
 SUBDIR+=	openoffice
+SUBDIR+=	openoffice2
 SUBDIR+=	openoffice-bin
 SUBDIR+=	openoffice2-bin
 SUBDIR+=	p5-Array-PrintCols
