--- a/misc/koffice/Makefile
+++ b/misc/koffice/Makefile
@@ -1,13 +1,9 @@
-# $NetBSD: Makefile,v 1.90 2007/01/17 23:47:21 wiz Exp $
+# $NetBSD: Makefile,v 1.91 2007/01/26 04:25:46 markd Exp $
 
-DISTNAME=	koffice-1.6.1
-PKGREVISION=	4
+DISTNAME=	koffice-1.6.2
 CATEGORIES=	misc kde
 MASTER_SITES=	${MASTER_SITE_KDE:=koffice-1.6.1/src/}
 EXTRACT_SUFX=	.tar.bz2
-
-PATCH_SITES=	ftp://ftp.kde.org/pub/kde/security_patches/
-PATCHFILES=	koffce-xpdf-CVE-2007-0104.diff
 
 MAINTAINER=	markd@NetBSD.org
 HOMEPAGE=	http://www.koffice.org/
