--- a/misc/koffice-l10n-fr/Makefile
+++ b/misc/koffice-l10n-fr/Makefile
@@ -1,9 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1 2006/12/03 04:17:28 markd Exp $
 
 KOFFICE_LANGUAGE=	French
 KOFFICE_LANGCODE=       fr
-
-DEPENDS+=	koffice-[0-9]*:../../misc/koffice
 
 .include "../../misc/koffice/l10n.mk"
 .include "../../mk/bsd.pkg.mk"
