--- a/time/p5-DateTime-Locale/Makefile
+++ b/time/p5-DateTime-Locale/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.5 2005/08/06 06:19:35 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2006/04/25 13:56:48 hiramatsu Exp $
 
-DISTNAME=	DateTime-Locale-0.22
+DISTNAME=	DateTime-Locale-0.33
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	time perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DateTime/}
