--- a/multimedia/p5-xmltv/Makefile
+++ b/multimedia/p5-xmltv/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2006/04/16 16:17:28 adrianp Exp $
+# $NetBSD: Makefile,v 1.18 2006/10/28 21:29:47 wiz Exp $
 
-DISTNAME=	xmltv-0.5.42
+DISTNAME=	xmltv-0.5.45
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	multimedia perl5
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=xmltv/}
