--- a/converters/p5-Unicode-String/Makefile
+++ b/converters/p5-Unicode-String/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.10 2006/03/04 21:29:06 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2007/02/22 19:26:15 wiz Exp $
 #
 
-DISTNAME=	Unicode-String-2.07
+DISTNAME=	Unicode-String-2.09
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	converters perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Unicode/}
 
