--- a/archivers/p5-Archive-Zip/Makefile
+++ b/archivers/p5-Archive-Zip/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.19 2005/10/20 17:25:38 abs Exp $
+# $NetBSD: Makefile,v 1.20 2006/03/04 21:28:53 jlam Exp $
 
-DISTNAME=		Archive-Zip-1.16
+DISTNAME=		Archive-Zip-1.18
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5zip
 CATEGORIES=		archivers perl5
@@ -11,6 +11,7 @@ HOMEPAGE=		http://search.cpan.org/dist/Archive-Zip/
 COMMENT=		Perl5 module interface to manipulate zip files
 
 DEPENDS+=		p5-Compress-Zlib-[0-9]*:../../devel/p5-Compress-Zlib
+DEPENDS+=		p5-File-Which-[0-9]*:../../devel/p5-File-Which
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
