--- a/textproc/p5-XML-SAX/Makefile
+++ b/textproc/p5-XML-SAX/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2006/03/04 21:30:50 jlam Exp $
+# $NetBSD: Makefile,v 1.16 2006/11/05 16:30:43 joerg Exp $
 
-DISTNAME=	XML-SAX-0.12
+DISTNAME=	XML-SAX-0.15
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=XML/}
 
