--- a/x11/xdpyinfo/Makefile
+++ b/x11/xdpyinfo/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/25 05:11:11 dsainty Exp $
 #
 
 DISTNAME=	xdpyinfo-1.0.1
@@ -6,7 +6,7 @@ CATEGORIES=	x11
 MASTER_SITES=	http://xorg.freedesktop.org/releases/individual/app/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	dsainty@NetBSD.org
+MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://xorg.freedesktop.org/
 COMMENT=	Display information utility for X
 
