--- a/x11/xhost/Makefile
+++ b/x11/xhost/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/02/25 04:29:15 dsainty Exp $
 #
 
 DISTNAME=	xhost-1.0.1
@@ -6,7 +6,7 @@ CATEGORIES=	x11
 MASTER_SITES=	http://xorg.freedesktop.org/releases/individual/app/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	dsainty@NetBSD.org
+MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://xorg.freedesktop.org/
 COMMENT=	Server access control program for X
 
