--- a/x11/xprop/Makefile
+++ b/x11/xprop/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/02/25 04:43:34 dsainty Exp $
+# $NetBSD: Makefile,v 1.2 2007/02/25 04:46:44 dsainty Exp $
 #
 
 DISTNAME=	xprop-1.0.2
@@ -6,7 +6,7 @@ CATEGORIES=	x11
 MASTER_SITES=	http://xorg.freedesktop.org/releases/individual/app/
 EXTRACT_SUFX=	.tar.bz2
 
-MAINTAINER=	dsainty@NetBSD.org
+MAINTAINER=	joerg@NetBSD.org
 HOMEPAGE=	http://xorg.freedesktop.org/
 COMMENT=	Property displayer for X
 
